[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/common/escape/EscapeInputMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/common/button_normal.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/common/button_press.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/common/ui_dynamicfont.tres" type="DynamicFont" id=4]

[node name="EscapeInputMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 640, 360 )
color = Color( 0, 0, 0, 0.627451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 575.0
margin_top = 480.0
margin_right = 704.0
margin_bottom = 540.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputLayer" type="CanvasLayer" parent="."]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
